--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
         <div class="header">
             <h1>App Alarmas UX</h1>
         </div>
+
+
+        <!-- Query with image section-->
+        <div class="search_image">
+            <img src="">
+        </div>
+
     </body>
 </html>
