--- a/index.html
+++ b/index.html
@@ -13,11 +13,26 @@
             <h1>App Alarmas UX</h1>
         </div>
 
-
         <!-- Query with image section-->
         <div class="search_image">
-            <img src="">
+            <div class="search_image__field">
+                <input class="search_field" placeholder="¿Qué alarma necesitas, cuentános con tu voz?">
+            </div>
         </div>
 
+        <div class="collections_section">
+            <div class="collections_section--title">
+                <h2>Mis Colecciones</h2>
+                <button class="action-button" type="button" href="./create_coleccion.html">
+                    Añadir coleccion
+                </button>
+            </div>
+        </div>
+
+        <div class="create_alarm"> 
+            <button class="create-button" type="button" href="./create_coleccion.html">
+                Añadir coleccion
+            </button>
+        </div>
     </body>
 </html>
