--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="create_alarm"> 
-            <button class="create-button" type="button" href="./create_coleccion.html">
+            <button class="create-button" type="button" href="./create_alarm.html">
                 Añadir coleccion
             </button>
         </div>
