--- a/index.html
+++ b/index.html
@@ -23,16 +23,19 @@
         <div class="collections_section">
             <div class="collections_section--title">
                 <h2>Mis Colecciones</h2>
-                <button class="action-button" type="button" href="./create_coleccion.html">
-                    Añadir coleccion
-                </button>
+                <a href="./create_coleccion.html">
+                    <button class="action-button" type="button">
+                        Añadir coleccion
+                    </button>
+                </a>
             </div>
         </div>
 
         <div class="create_alarm"> 
-            <button class="create-button" type="button" href="./create_alarm.html">
-                Añadir coleccion
-            </button>
+            <a href="./create_alarm.html">
+                <button class="create-button" type="button">Añadir coleccion</button>
+            </a>
+            
         </div>
     </body>
 </html>
