back button on create alarm

--- a/create_alarm.html
+++ b/create_alarm.html
@@ -13,5 +13,14 @@
             <h1>App Alarmas UX</h1>
         </div>
 
+        <div class="back_action">
+            <a href="./index.html">
+                <svg width="13" height="20" viewBox="0 0 13 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M11 18L2.7323 11.4141C1.7559 10.6364 1.7559 9.36365 2.7323 8.58587L11 2" stroke="#292D32" stroke-width="2.30609" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                <p>Volver a la pantalla anterior </p>
+            </a>    
+        </div>
+
     </body>
 </html>
