screen for create alarm

--- a/create_alarm.html
+++ b/create_alarm.html
@@ -22,5 +22,42 @@
             </a>    
         </div>
 
+
+        <div class="create_alarm__title">
+            <h1>Compartir alarma</h1>
+            <p>ingresa los datos correspondientes a alarma que desas compartir, de esta realizarás un aporte invaluable a la comunidad</p>
+        </div>
+
+        <div class="create_alarm__form">
+            <form action="./index.html" method="get"></form>
+                <div class="create_alarm__form--row">
+                    <div class="form_ca-1">
+                        <p class="form_ca-1__text">Horas</p>
+                        <input class="form_ca-1__input" type="number" min="0" value="0" max="23">
+                    </div>
+
+                    <div class="form_ca-1">
+                        <p class="form_ca-1__text">Minutos</p>
+                        <input class="form_ca-1__input" type="number" min="0" value="0" max="23">
+                    </div>
+
+                    <div class="form_ca-1">
+                        <p class="form_ca-1__text">Segundos</p>
+                        <input class="form_ca-1__input" type="number" min="0" value="0" max="23">
+                    </div>
+                </div>
+
+                <div class="form_ca--textarea">
+                    <p class="form_ca-1__text">Descripción</p>
+                    <textarea class="form_ca-1__textarea" placeholder="Ingrese la descripción de la alarma">
+                    </textarea>
+                </div>
+
+                <a href="./index.html">
+                    <button class="form_ca--button" type="submit">Compartir</button>
+                </a>
+            </form>
+        </div>
+
     </body>
 </html>
