fix final image

--- a/index.html
+++ b/index.html
@@ -29,13 +29,32 @@
                     </button>
                 </a>
             </div>
+
+
+            <div class="collections_section--row">
+                <div id="estudio" class="collections-section--row__element">
+                    <button>Editar colección</button>
+                </div>
+
+                <div id="cocina" class="collections-section--row__element">
+                    <button>Editar colección</button>
+                </div>
+
+                <div id="gimnasio" class="collections-section--row__element">
+                    <button>Editar colección</button>
+                </div>
+
+                <div id="estudio" class="collections-section--row__element">
+                    <button>Editar colección</button>
+                </div>
+            </div>
+            
         </div>
 
         <div class="create_alarm"> 
             <a href="./create_alarm.html">
-                <button class="create-button" type="button">Añadir coleccion</button>
+                <button class="create-button" type="button">¿Deseas compartir una alarma para la comunidad general?</button>
             </a>
-            
         </div>
     </body>
 </html>
