--- a/index.html
+++ b/index.html
@@ -64,5 +64,5 @@
         </div>
     </body>
 
-    <footer><p class="autor">autor: Juan Camilo Hernández Parra</p></footer>
+    <footer><p class="autor">AUTOR: Juan Camilo Hernández Parra</p></footer>
 </html>
