--- a/create_alarm.html
+++ b/create_alarm.html
@@ -65,6 +65,6 @@
             </form>
         </div>
         
-        <footer><p class="autor">autor: Juan Camilo Hernández Parra</p></footer>
+        <footer><p class="autor">AUTOR: Juan Camilo Hernández Parra</p></footer>
     </body>
 </html>
