Maquetación dos pantallas web

--- a/create_coleccion.html
+++ b/create_coleccion.html
@@ -19,7 +19,44 @@
             </div>
         </div>
 
-        <footer><p class="autor">autor: Cristian</p></footer>
+        <div class="back_action">
+            <a href="./index.html">
+                <svg width="13" height="20" viewBox="0 0 13 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M11 18L2.7323 11.4141C1.7559 10.6364 1.7559 9.36365 2.7323 8.58587L11 2" stroke="#292D32" stroke-width="2.30609" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                <p>Volver a la pantalla anterior </p>
+            </a>    
+        </div>
 
+
+        <div class="create_alarm__title">
+            <h1>Añadir colección</h1>
+            <p>Ingresa los datos correspondientes a la colección que deseas crear, esto te ayudará a agrupar tus alarmas de una mejor manera.</p>
+        </div>
+
+        <div class="create_alarm__form">
+            <form action="./index.html" method="get"></form>
+                <div class="form_ca--textarea">
+                    <p class="form_ca-1__text">Nombre</p>
+                    <textarea class="form_ca-1__areatext" placeholder="Ingrese el nombre de la colección">
+                    </textarea>
+                    <br>
+                    <p class="form_ca-1__text">Tipo</p>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">Seleccione una opción</button>
+                    <ul class="dropdown-content">
+                        <li><a href="#">Cocina</a></li>
+                        <li><a href="#">Gym</a></li>
+                        <li><a href="#">Estudio</a></li>
+                    </ul>
+                </div>
+                <a href="./index.html">
+                    <button class="form_ca--button" type="submit">Crear colección</button>
+                </a>
+            </form>
+        </div>
+        
+        <footer><p class="autor">Autor: Crhistian Suárez</p></footer>
     </body>
 </html>
